--- a/css/estilos-ruan.css
+++ b/css/estilos-ruan.css
@@ -99,22 +99,23 @@ a { text-decoration: none; }
     background-color: var(--cor-clara);
 }
 
-.destaque {
-    height: 75vh;
+.conteudo .destaque{
     background-image: url(../imagens/fundo-destaque.jpg);
     background-attachment: fixed;
+    height: 75vh;
     color: var(--cor-clara);
     text-align: center;
     display: flex;
-    flex-direction: column;
+    flex-flow: column nowrap;
+    align-items: center;
     justify-content: center;
+    
 }
 
-/* Etapa 1: criar regra de animação */
 @keyframes animaDestaque {
     /* Dê (como começa) */
     from { 
-        opacity: 0;
+        opacity: 1;
         transform: scale(0.5);
     }
 
@@ -136,100 +137,57 @@ a { text-decoration: none; }
     /* animation-direction: alternate; */
 }
 
-
 /* Função clamp()
 Usada para definir um valor que se ajusta dinamicamente
 entre um valor MÍNIMO, IDEAL/FLEXÍVEL/VARIÁVEL e MÁXIMO. */
-.destaque h2 { font-size: clamp(3rem, 10vw, 7rem); }
+.destaque h2 { font-size: clamp(3rem, 10vw, 3rem); }
 .destaque p { font-size: clamp(1.5rem, 3vw, 3rem); }
 
-article h2 {
-    padding: 1rem;
-    font-size: 1.4rem;
-    font-family: Raleway, sans-serif;
+article h2{
+    padding: 1.5rem;
+    font-size: 1.5rem;
+    font-family: raleway, sans-serif;
     color: var(--cor-titulo);
+
 }
 
-article p {
-    padding: 0.5rem 0;
+article p{
     font-size: 1.2rem;
+    padding: 1.2rem 0;
 }
 
-article address {
-    font-style: normal;
-    font-size: 1.2rem;
-}
-
-.front-end, .historia, .localizacao {
+.front-end, .historia, .localizacao{
     text-align: center;
 }
 
-/* Exercícios (correção) */
-.historia {
+.historia{
     background-image: url(../imagens/fundo-madeira.jpg);
-    background-size: cover;
     background-attachment: fixed;
+    background-size: cover;
 }
 
-.historia h2 {
+.historia h2{
     color: var(--cor-clara);
-    text-shadow: var(--cor-escura) 2px 2px 5px;
+    text-shadow: red 0 0 40px;
 }
 
-.historia iframe {
-    width: 100%;
+.historia iframe{
+    width: 90%;
     max-width: 700px;
     margin-bottom: 2rem;
 }
 
-.localizacao iframe {
-    width: 100%;
+.localizacao iframe{
+    width: 90%;
     margin-top: 2rem;
 }
-
 .rodape {
-    background-color: var(--cor-escura);  
-    color: var(--cor-clara);  
     height: 30vh;
-    font-weight: bold;
+    color: var(--cor-clara);
+    background-color: var(--cor-escura);
+    font-weight: 800;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-}
-
-
-/* Regras para as demais páginas (Produtos, Serviços e Contato) */
-.conteudo-geral {
-    background-color: var(--cor-intermediaria);
-    padding: 0.5rem;
-}
-
-.conteudo-geral h2 {
-    padding-left: 0;
-    font-size: 1.8rem;
-    border-bottom: solid 1px;
-}
-
-/* Regras para tabela */
-table {
-    border: solid 4px var(--cor-escura);
-    width: 80%;
-    max-width: 600px;
-    margin: auto;
-}
-
-.galeria{
-    text-align: center;
-}
-
-.galeria img{
-    border-radius: 50%;
-    box-shadow: var(--cor-escura) 0 0 40px;
-    transform: scale(0.8);
-    transition: 0.5s;
-}
-
-.galeria img:hover{
-    transform: scale(1) rotate(-10deg);
 }
